- Encapsulate building of a runtime by jlink or copying from the external directory in RuntimeBuilder interface - Add ctor to BundlerParamInfo class and make StandardBundlerParam class a storage for standard parameters - Add defaults to Application/Package and derived interfaces