@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2015, 2024, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2024, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -24,217 +24,61 @@
  */
 package jdk.jpackage.internal;
 
-import java.io.File;
-import java.io.PrintWriter;
-import java.io.StringWriter;
-import java.lang.module.Configuration;
-import java.lang.module.ModuleDescriptor;
-import java.lang.module.ModuleFinder;
-import java.lang.module.ModuleReference;
-import java.lang.module.ResolvedModule;
+import java.io.IOException;
+import java.nio.file.Files;
+import java.nio.file.LinkOption;
 import java.nio.file.Path;
 import java.text.MessageFormat;
-import java.util.ArrayList;
-import java.util.Collection;
-import java.util.Collections;
-import java.util.HashSet;
+import java.util.Arrays;
 import java.util.List;
-import java.util.Map;
-import java.util.Objects;
-import java.util.Optional;
-import java.util.Set;
-import java.util.function.Supplier;
-import java.util.jar.JarFile;
-import java.util.spi.ToolProvider;
-import java.util.stream.Collectors;
-import java.util.stream.Stream;
-import jdk.internal.module.ModulePath;
-import static jdk.jpackage.internal.StandardBundlerParam.ADD_MODULES;
-import static jdk.jpackage.internal.StandardBundlerParam.JLINK_OPTIONS;
-import static jdk.jpackage.internal.StandardBundlerParam.LIMIT_MODULES;
-import static jdk.jpackage.internal.StandardBundlerParam.MODULE_PATH;
+import jdk.internal.util.OperatingSystem;
 
-final class RuntimeBuilder {
+interface RuntimeBuilder {
 
-    private RuntimeBuilder(List<String> jlinkCmdLine) {
-        this.jlinkCmdLine = jlinkCmdLine;
-    }
+    void createRuntime(ApplicationLayout appLayout) throws PackagerException, IOException;
 
-    void execute(Path outputDir) throws PackagerException {
-        var args = new ArrayList<String>();
-        args.add("--output");
-        args.add(outputDir.toString());
-        args.addAll(jlinkCmdLine);
-
-        StringWriter writer = new StringWriter();
-        PrintWriter pw = new PrintWriter(writer);
-
-        int retVal = LazyLoad.JLINK_TOOL.run(pw, pw, args.toArray(String[]::new));
-        String jlinkOut = writer.toString();
-
-        args.add(0, "jlink");
-        Log.verbose(args, List.of(jlinkOut), retVal, -1);
-        if (retVal != 0) {
-            throw new PackagerException("error.jlink.failed", jlinkOut);
-        }
-    }
-
-    static ModuleFinder createModuleFinder(Collection<Path> modulePath) {
-        return ModuleFinder.compose(
-                ModulePath.of(JarFile.runtimeVersion(), true,
-                        modulePath.toArray(Path[]::new)),
-                ModuleFinder.ofSystem());
-    }
-
-    static RuntimeBuilder createFromParams(Map<String, ? super Object> params,
-            List<LauncherStartupInfo> startupInfos) throws ConfigException {
-        List<Path> modulePath = Optional.ofNullable(MODULE_PATH.fetchFrom(params)).orElseGet(
-                Collections::emptyList);
-        Set<String> addModules = Optional.ofNullable(ADD_MODULES.fetchFrom(params)).orElseGet(
-                Collections::emptySet);
-        Set<String> limitModules = Optional.ofNullable(LIMIT_MODULES.fetchFrom(params)).orElseGet(
-                Collections::emptySet);
-        List<String> options = Optional.ofNullable(JLINK_OPTIONS.fetchFrom(params)).orElseGet(
-                Collections::emptyList);
-
-        return new RuntimeBuilder(createJLinkCmdline(modulePath, addModules, limitModules, options,
-                startupInfos));
-    }
-
-    private static List<String> createJLinkCmdline(List<Path> modulePath, Set<String> addModules,
-            Set<String> limitModules, List<String> options, List<LauncherStartupInfo> startupInfos) throws ConfigException {
-        List<String> launcherModules = startupInfos.stream().map(si -> {
-            if (si instanceof LauncherModularStartupInfo siModular) {
-                return siModular.moduleName();
-            } else {
-                return (String) null;
-            }
-        }).filter(Objects::nonNull).toList();
-
-        if (launcherModules.isEmpty() && addModules.isEmpty()) {
-            addModules = Set.of(ALL_DEFAULT);
+    static RuntimeBuilder createCopyingRuntimeBuilder(Path runtimeDir, Path... modulePath) throws ConfigException {
+        if (!Files.exists(runtimeDir)) {
+            throw new ConfigException(MessageFormat.format(I18N.getString(
+                    "message.runtime-image-dir-does-not-exist"), "--runtime-image", runtimeDir
+                            .toString()), MessageFormat.format(I18N.getString(
+                            "message.runtime-image-dir-does-not-exist.advice"), "--runtime-image"));
         }
 
-        var modules = createModuleList(modulePath, addModules, limitModules);
+        return appLayout -> {
+            final Path runtimeHome = getRuntimeHome(runtimeDir);
 
-        modules.addAll(launcherModules);
+            // copy whole runtime, need to skip jmods and src.zip
+            final List<String> excludes = Arrays.asList("jmods", "src.zip");
+            IOUtils.copyRecursive(runtimeHome, appLayout.runtimeHomeDirectory(), excludes,
+                    LinkOption.NOFOLLOW_LINKS);
 
-        var args = new ArrayList<String>();
-        if (!modulePath.isEmpty()) {
-            args.add("--module-path");
-            args.add(getPathList(modulePath));
-        }
-        if (!modules.isEmpty()) {
-            args.add("--add-modules");
-            args.add(getStringList(modules));
-        }
-        if (!limitModules.isEmpty()) {
-            args.add("--limit-modules");
-            args.add(getStringList(limitModules));
-        }
+            // if module-path given - copy modules to appDir/mods
+            List<Path> defaultModulePath = getDefaultModulePath();
+            Path dest = appLayout.appModsDirectory();
 
-        for (String option : options) {
-            switch (option) {
-                case "--output", "--add-modules", "--module-path" -> {
-                    throw new ConfigException(MessageFormat.format(I18N.getString(
-                            "error.blocked.option"), option), null);
-                }
-                default -> {
-                    args.add(option);
+            for (Path mp : modulePath) {
+                if (!defaultModulePath.contains(mp)) {
+                    IOUtils.copyRecursive(mp, dest);
                 }
             }
-        }
-
-        return args;
+        };
     }
 
-    /*
-     * Returns the set of modules that would be visible by default for
-     * a non-modular-aware application consisting of the given elements.
-     */
-    private static Set<String> getDefaultModules(
-            Collection<Path> paths, Collection<String> addModules) {
-
-        // the modules in the run-time image that export an API
-        Stream<String> systemRoots = ModuleFinder.ofSystem().findAll().stream()
-                .map(ModuleReference::descriptor)
-                .filter(RuntimeBuilder::exportsAPI)
-                .map(ModuleDescriptor::name);
-
-        Set<String> roots = Stream.concat(systemRoots,
-                addModules.stream()).collect(Collectors.toSet());
-
-        ModuleFinder finder = createModuleFinder(paths);
-
-        return Configuration.empty()
-                .resolveAndBind(finder, ModuleFinder.of(), roots)
-                .modules()
-                .stream()
-                .map(ResolvedModule::name)
-                .collect(Collectors.toSet());
-    }
-
-    /*
-     * Returns true if the given module exports an API to all module.
-     */
-    private static boolean exportsAPI(ModuleDescriptor descriptor) {
-        return descriptor.exports()
-                .stream()
-                .anyMatch(e -> !e.isQualified());
-    }
-
-    private static Set<String> createModuleList(List<Path> paths,
-            Set<String> addModules, Set<String> limitModules) {
-
-        final Set<String> modules = new HashSet<>();
-
-        final Map<String, Supplier<Collection<String>>> phonyModules = Map.of(
-                ALL_MODULE_PATH,
-                () -> createModuleFinder(paths)
-                        .findAll()
-                        .stream()
-                        .map(ModuleReference::descriptor)
-                        .map(ModuleDescriptor::name)
-                        .collect(Collectors.toSet()),
-                ALL_DEFAULT,
-                () -> getDefaultModules(paths, modules));
-
-        Supplier<Collection<String>> phonyModule = null;
-        for (var module : addModules) {
-            phonyModule = phonyModules.get(module);
-            if (phonyModule == null) {
-                modules.add(module);
+    private static Path getRuntimeHome(Path runtimeDir) {
+        if (OperatingSystem.isMacOS()) {
+            // On Mac topImage can be runtime root or runtime home.
+            Path runtimeHome = runtimeDir.resolve("Contents/Home");
+            if (Files.isDirectory(runtimeHome)) {
+                // topImage references runtime root, adjust it to pick data from
+                // runtime home
+                return runtimeHome;
             }
         }
-
-        if (phonyModule != null) {
-            modules.addAll(phonyModule.get());
-        }
-
-        return modules;
+        return runtimeDir;
     }
 
-    private static String getPathList(List<Path> pathList) {
-        return pathList.stream()
-                .map(Path::toString)
-                .collect(Collectors.joining(File.pathSeparator));
+    static List<Path> getDefaultModulePath() {
+        return List.of(Path.of(System.getProperty("java.home"), "jmods").toAbsolutePath());
     }
-
-    private static String getStringList(Set<String> strings) {
-        return strings.stream().collect(Collectors.joining(","));
-    }
-
-    private final List<String> jlinkCmdLine;
-
-    // The token for "all modules on the module path".
-    private static final String ALL_MODULE_PATH = "ALL-MODULE-PATH";
-
-    // The token for "all valid runtime modules".
-    private static final String ALL_DEFAULT = "ALL-DEFAULT";
-
-    private static class LazyLoad {
-
-        static final ToolProvider JLINK_TOOL = ToolProvider.findFirst(
-                "jlink").orElseThrow();
-    };
 }
